--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "dist/index.js",
     "engines": {
-    "node": "16.0.0"
+    "node": "16.x"
   },
     "scripts": {
         "tsc": "tsc",
