--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "helmet": "^7.1.0",
         "mongoose": "^8.2.4",
         "qrcode-terminal": "^0.12.0",
-        "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_7"
+        "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
