--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "fs": "^0.0.1-security",
         "helmet": "^7.1.0",
         "mongoose": "^8.2.4",
+        "multer": "^1.4.5-lts.1",
         "qrcode-terminal": "^0.12.0",
         "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
     },
@@ -36,6 +37,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/mongodb": "^4.0.7",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.11.30",
         "@types/node-fetch": "^2.6.11",
         "@types/qrcode-terminal": "^0.12.2",
