--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "mongoose": "^8.2.4",
         "multer": "^1.4.5-lts.1",
         "qrcode-terminal": "^0.12.0",
+        "vcard-parser": "^1.0.0",
         "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
     },
     "devDependencies": {
