--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "version": "1.0.0",
     "description": "",
     "main": "dist/index.js",
-    "engines": {
-        "node": "16.x"
-    },
     "scripts": {
         "tsc": "tsc",
         "tsc:dev": "tsc -w",
@@ -32,7 +29,7 @@
         "multer": "^1.4.5-lts.1",
         "qrcode-terminal": "^0.12.0",
         "vcard-parser": "^1.0.0",
-        "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
+        "whatsapp-web.js": "1.26.1-alpha.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
