--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "multer": "^1.4.5-lts.1",
         "qrcode-terminal": "^0.12.0",
         "vcard-parser": "^1.0.0",
-        "whatsapp-web.js": "1.26.1-alpha.3"
+        "whatsapp-web.js": "^1.34.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
